<?xml version="1.0"?>
<package format="3">
  <name>imgui</name>
  <version>0.1.0</version>
  <description>Imgui package for ROS2 integration</description>
  <maintainer email="gilbert@missionrobotics.us">gilborty</maintainer>
  <url type="repository">https://github.com/gilborty/imgui</url>

  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libglfw3-dev</depend>
  <depend>libglew-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>